--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -19,7 +19,7 @@ jobs:
             - name: Login to Docker Hub
               uses: docker/login-action@v3
               with:
-                  username: ${{ secrets.DOCKERHUB_USERNAME }}
+                  username: yenhung
                   password: ${{ secrets.DOCKERHUB_TOKEN }}
 
             - name: Build and Push Docker image
@@ -27,5 +27,4 @@ jobs:
               with:
                   context: .
                   push: true
-                  tags: |
-                      ${{ secrets.DOCKERHUB_USERNAME }}/node-deploy-demo:latest
+                  tags: yenhung/node-deploy-demo:latest
