--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -22,15 +22,15 @@ jobs:
             - name: Log in to Docker Hub
               uses: docker/login-action@v3
               with:
-                  username: yenhung
+                  username: ${{ secrets.DOCKERHUB_USERNAME }}
                   password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-            - name: Build and push
+            - name: Build and push multi-arch Docker image
               uses: docker/build-push-action@v5
               with:
                   context: .
-                  platforms: linux/amd64
+                  platforms: linux/amd64,linux/arm64
                   push: true
-                  tags: yenhung/node-deploy-demo:latest
-                  cache-from: type=registry,ref=yenhung/node-deploy-demo:latest
+                  tags: ${{ secrets.DOCKERHUB_USERNAME }}/node-deploy-demo:latest
+                  cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/node-deploy-demo:latest
                   cache-to: type=inline
