--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,12 +1,16 @@
-name: Docker Build and Push
+name: Docker Build and Deploy
 
 on:
     push:
-        branches:
-            - main
+        branches: ["main"]
+    pull_request:
+        branches: ["main"]
+
+env:
+    DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
 
 jobs:
-    docker-build:
+    build:
         runs-on: ubuntu-latest
 
         steps:
@@ -14,19 +18,19 @@ jobs:
               uses: actions/checkout@v3
 
             - name: Set up QEMU
-              uses: docker/setup-qemu-action@v3
+              uses: docker/setup-qemu-action@v2
 
             - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v3
+              uses: docker/setup-buildx-action@v2
 
-            - name: Log in to Docker Hub
-              uses: docker/login-action@v3
+            - name: Login to Docker Hub
+              uses: docker/login-action@v2
               with:
                   username: ${{ secrets.DOCKERHUB_USERNAME }}
                   password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-            - name: Build and push multi-arch Docker image
-              uses: docker/build-push-action@v5
+            - name: Build and push
+              uses: docker/build-push-action@v4
               with:
                   context: .
                   platforms: linux/amd64,linux/arm64
@@ -34,3 +38,19 @@ jobs:
                   tags: ${{ secrets.DOCKERHUB_USERNAME }}/node-deploy-demo:latest
                   cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/node-deploy-demo:latest
                   cache-to: type=inline
+
+            - name: Trigger Render Deploy
+              if: success()
+              run: |
+                  echo "Triggering Render deployment..."
+                  RESPONSE=$(curl -s -w "\n%{http_code}" -X POST ${{ secrets.RENDER_DEPLOY_HOOK_URL }})
+                  HTTP_STATUS=$(echo "$RESPONSE" | tail -n 1)
+                  BODY=$(echo "$RESPONSE" | sed '$d')
+                  echo "Response body: $BODY"
+                  echo "Status code: $HTTP_STATUS"
+                  if [ "$HTTP_STATUS" -ge 200 ] && [ "$HTTP_STATUS" -lt 300 ]; then
+                    echo "Deployment triggered successfully"
+                  else
+                    echo "Failed to trigger deployment"
+                    exit 1
+                  fi
