--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -8,6 +8,14 @@ on:
 
 env:
     DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+    DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/node-deploy-demo
+    NODE_ENV: production
+    NODE_VERSION: "18"
+
+# 添加并发控制
+concurrency:
+    group: ${{ github.workflow }}-${{ github.ref }}
+    cancel-in-progress: true
 
 jobs:
     build:
@@ -16,6 +24,15 @@ jobs:
         steps:
             - name: Check out code
               uses: actions/checkout@v3
+
+            - name: Set up Node.js
+              uses: actions/setup-node@v4
+              with:
+                  node-version: ${{ env.NODE_VERSION }}
+                  cache: "npm"
+
+            - name: Install dependencies
+              run: npm ci
 
             - name: Set up QEMU
               uses: docker/setup-qemu-action@v2
@@ -26,7 +43,7 @@ jobs:
             - name: Login to Docker Hub
               uses: docker/login-action@v2
               with:
-                  username: ${{ secrets.DOCKERHUB_USERNAME }}
+                  username: ${{ env.DOCKERHUB_USERNAME }}
                   password: ${{ secrets.DOCKERHUB_TOKEN }}
 
             - name: Build and push
@@ -35,8 +52,8 @@ jobs:
                   context: .
                   platforms: linux/amd64,linux/arm64
                   push: true
-                  tags: ${{ secrets.DOCKERHUB_USERNAME }}/node-deploy-demo:latest
-                  cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/node-deploy-demo:latest
+                  tags: ${{ env.DOCKER_IMAGE }}:latest
+                  cache-from: type=registry,ref=${{ env.DOCKER_IMAGE }}:latest
                   cache-to: type=inline
 
             - name: Trigger Render Deploy
