--- a/.github/workflows/helm-deploy.yml
+++ b/.github/workflows/helm-deploy.yml
@@ -7,28 +7,10 @@ on:
 jobs:
     deploy:
         runs-on: ubuntu-latest
-        env:
-            KUBECONFIG: ${{ github.workspace }}/kubeconfig
 
         steps:
             - name: Checkout code
               uses: actions/checkout@v3
-
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v2
-
-            - name: Login to Docker Hub
-              uses: docker/login-action@v2
-              with:
-                  username: ${{ secrets.DOCKERHUB_USERNAME }}
-                  password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-            - name: Build and push Docker image
-              uses: docker/build-push-action@v4
-              with:
-                  context: .
-                  push: true
-                  tags: yenhung/node-deploy-demo:latest,yenhung/node-deploy-demo:${{ github.sha }}
 
             - name: Set up kubectl
               uses: azure/setup-kubectl@v3
@@ -42,14 +24,10 @@ jobs:
 
             - name: Decode kubeconfig
               run: |
-                  echo "${{ secrets.KUBECONFIG_BASE64 }}" | base64 -d > $KUBECONFIG
-                  chmod 600 $KUBECONFIG
-
-            - name: Test kubectl connection
-              run: kubectl cluster-info
+                  echo "${{ secrets.KUBECONFIG_BASE64 }}" | base64 -d > kubeconfig
+                  export KUBECONFIG=$PWD/kubeconfig
 
             - name: Helm Upgrade
               run: |
                   helm upgrade --install node-deploy-demo ./node-deploy-demo-chart \
-                    --set image.tag=${{ github.sha }} \
                     --set env.APP_VERSION=${{ github.sha }}
